--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li class="first"><a href="#">HOME</a></li>
             <li class="first"><a href="./pages/fruits.html">FRUITS</a></li>
             <li class="first"><a href="./pages/grocery.html">GROCERY</a></li>
-            <li class="first"><a href="pages/about.html">ABOUT</a></li>
+            <li class="first"><a href="./pages/about.html">ABOUT</a></li>
             <li class="first"><a href="./pages/contact.html">CONTACT</a></li>
         </ul>
 
