--- a/pages/grocery.html
+++ b/pages/grocery.html
@@ -16,8 +16,8 @@
             <li class="first"><a href="/first/index.html">HOME</a></li>
             <li class="first"><a href="./fruits.html">FRUITS</a></li>
             <li class="first"><a href="./grocery.html">GROCERY</a></li>
-            <li class="first"><a href="/first/pages/about.html">ABOUT</a></li>
-            <li class="first"><a href="/first/pages/contact.html">CONTACT</a></li>
+            <li class="first"><a href="./about.html">ABOUT</a></li>
+            <li class="first"><a href="./contact.html">CONTACT</a></li>
         </ul>
 
     <h1 class="heading">GROCERY MENU</h1>
