--- a/pages/about.html
+++ b/pages/about.html
@@ -14,10 +14,10 @@
 
         <ul class="define">
             <li class="first"><a href="/first/index.html">HOME</a></li>
-            <li class="first"><a href="/first/pages/fruits.html">FRUITS</a></li>
-            <li class="first"><a href="/first/pages/grocery.html">GROCERY</a></li>
-            <li class="first"><a href="/first/pages/about.html">ABOUT</a></li>
-            <li class="first"><a href="/first/pages/contact.html">CONTACT</a></li>
+            <li class="first"><a href="./fruits.html">FRUITS</a></li>
+            <li class="first"><a href="./grocery.html">GROCERY</a></li>
+            <li class="first"><a href="./about.html">ABOUT</a></li>
+            <li class="first"><a href="./contact.html">CONTACT</a></li>
         </ul>
 
     
