--- a/pages/grocery.html
+++ b/pages/grocery.html
@@ -13,7 +13,7 @@
 </div>    
 
         <ul class="define">
-            <li class="first"><a href="/first/index.html">HOME</a></li>
+            <li class="first"><a href="/first/pages/">HOME</a></li>
             <li class="first"><a href="./fruits.html">FRUITS</a></li>
             <li class="first"><a href="./grocery.html">GROCERY</a></li>
             <li class="first"><a href="./about.html">ABOUT</a></li>
